Package: tmle.npvi
===================
Version: 0.8.6 [2014-06-27]
o Package does not DEPEND on 'MASS' and 'sgeostat' anymore, but IMPORTS
functions from them.
o Now handling the (rare) situation where
'simulateParsimoniouslyXgivenW' was throwing the error "Parsimonious
conditional simulation of X given W failed".

Version: 0.8.5 [2014-06-20]
o Added parameter 'nMax' to speed up 'getSimulationScheme'.

Version: 0.8.4 [2014-06-20]
o Updated tcga12brca data set (now 150 genes on chr 17).

Version: 0.8.3 [2014-05-23]
o Updated tcga12brca data set.

Version: 0.8.2 [2014-05-23]
o Added tcga12brca data set.
o Updated DESCRIPTION as suggested by Henrik Bengtsson.
o Enhanced scripts for TCGA data analysis.

Version: 0.8.1 [2014-02-08]
o Now using lazy-loading of learning libraries instead of assigning
  objects to the global environment.   

Version: 0.8.0 [2014-02-07]
o Passes R CMD check --as-cran

Version: 0.7.0 [2013-11-22]
o Learning and SuperLearning libraries now in 'data/'.

Version: 0.6.3 [2013-10-11]
o Documentation up to date.
o Package passes R CMD check.
o Added a package vignette.

Version: 0.6.2 [2013-09-10]
o Improved documentation.

Version: 0.6.1 [2013-06-20]
o Added argument 'f' to 'tmle.npvi'.

Version: 0.6.0 [2013-05-29]
o Now supporting multivariate 'W'.

Version: 0.5.3 [2013-04-18]
o More updates for compatibility with SuperLearner v >= 2.0

Version: 0.5.2 [2011-09-20]
o Updated calls to "SuperLearner" for compatibility with v >= 2.0

Version: 0.5.1 [2011-05-06]
o SuperLearning works again.

Version: 0.5.0 [2011-05-06]
o Tabulated version works.

Version: 0.4.2 [2011-02-23]
o Major updates to NPVI class definition.  'psi', EIC and 'epsilon' 
  are now estimated automatically at initialization and at each update
o Thresholding for 'g', 'mu', 'theta' is now performed systematically
  within the corresponding 'set' functions.
o CLEANUP: rewrote NPVI.update using side functions 'estimateDev*' to 
  estimate 'gradients'.

Version: 0.4.1 [2011-02-16]